@@ -229,6 +229,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return true für ok, false wenn keine Verbindung hergestellt werden konnte.
 	 * @deprecated since 3.10 use {@link #connect(DataSource)}
 	 */
+	@Deprecated
 	public static boolean connect(final Settings cfg) {
 		DBConnection dbConnection = new DBConnection();
 		dbConnection.setDBUser(System.getProperty(ElexisSystemPropertyConstants.CONN_DB_USERNAME));
@@ -300,12 +301,12 @@ public abstract class PersistentObject implements IPersistentObject {
 		// --
 		Hashtable<Object, Object> hConn = getConnectionHashtable();
 		if (hConn != null) {
-			dbConnection.setDBDriver(checkNull((String) hConn.get(Preferences.CFG_FOLDED_CONNECTION_DRIVER)));
-			dbConnection.setDBUser(checkNull((String) hConn.get(Preferences.CFG_FOLDED_CONNECTION_USER)));
-			dbConnection.setDBPassword(checkNull((String) hConn.get(Preferences.CFG_FOLDED_CONNECTION_PASS)));
-			dbConnection.setDBFlavor(checkNull((String) hConn.get(Preferences.CFG_FOLDED_CONNECTION_TYPE)));
+			dbConnection.setDBDriver(checkNull(hConn.get(Preferences.CFG_FOLDED_CONNECTION_DRIVER)));
+			dbConnection.setDBUser(checkNull(hConn.get(Preferences.CFG_FOLDED_CONNECTION_USER)));
+			dbConnection.setDBPassword(checkNull(hConn.get(Preferences.CFG_FOLDED_CONNECTION_PASS)));
+			dbConnection.setDBFlavor(checkNull(hConn.get(Preferences.CFG_FOLDED_CONNECTION_TYPE)));
 			dbConnection
-					.setDBConnectString(checkNull((String) hConn.get(Preferences.CFG_FOLDED_CONNECTION_CONNECTSTRING)));
+					.setDBConnectString(checkNull(hConn.get(Preferences.CFG_FOLDED_CONNECTION_CONNECTSTRING)));
 		}
 		log.info("Driver is " + dbConnection.getDBDriver());
 		try {
@@ -390,6 +391,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return
 	 * @deprecated since 3.10 use {@link #connect(DataSource)}
 	 */
+	@Deprecated
 	public static boolean connect(final JdbcLink jdbcLink) {
 		DBConnection dbConnection = new DBConnection();
 		dbConnection.setJdbcLink(jdbcLink);
@@ -455,6 +457,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @deprecated do not use direct JdbcLink access
 	 * @return den JdbcLink, der die Verbindung zur Datenbank enthält
 	 */
+	@Deprecated
 	public static JdbcLink getConnection() {
 		return defaultConnection.getJdbcLink();
 	}
@@ -594,6 +597,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	}
 
 	/** Einen menschenlesbaren Identifikationsstring für dieses Objet liefern */
+	@Override
 	abstract public String getLabel();
 
 	/**
@@ -609,6 +613,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *
 	 * @return true wenn die Daten gültig (nicht notwendigerweise korrekt) sind
 	 */
+	@Override
 	public boolean isValid() {
 		if (state() < EXISTS) {
 			return false;
@@ -623,6 +628,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *
 	 * @return die ID.
 	 */
+	@Override
 	public String getId() {
 		return id;
 	}
@@ -657,6 +663,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return der code-String, aus dem mit {@link PersistentObjectFactory}
 	 *         .createFromString wieder das Objekt erstellt werden kann
 	 */
+	@Override
 	public String storeToString() {
 		return getClass().getName() + StringConstants.DOUBLECOLON + getId();
 	}
@@ -678,6 +685,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return a value between INEXISTENT and EXISTS
 	 */
 
+	@Override
 	public int state() {
 		if (StringTool.isNothing(getId()) || getId().contains("'")) {
 			return INVALID_ID;
@@ -711,6 +719,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *         wurde
 	 */
 
+	@Override
 	public boolean exists() {
 		return state() == EXISTS;
 	}
@@ -722,6 +731,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *
 	 * @return true, if the object is available in the database, false otherwise
 	 */
+	@Override
 	public boolean isAvailable() {
 		return (state() >= DELETED);
 	}
@@ -733,6 +743,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return an identifier that may be empty but will never be null
 	 */
 
+	@Override
 	public String getXid(final String domain) {
 		if (domain.equals(XidConstants.DOMAIN_ELEXIS)) {
 			return getId();
@@ -752,6 +763,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * quality. If no xid is given for this object, a newly created xid of local
 	 * quality will be returned
 	 */
+	@Override
 	public IXid getXid() {
 		List<IXid> res = getXids();
 		if (res.size() == 0) {
@@ -781,6 +793,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *
 	 * @return a List that might be empty but is never null
 	 */
+	@Override
 	@SuppressWarnings("unchecked")
 	public List<IXid> getXids() {
 		Query<Xid> qbe = new Query<Xid>(Xid.class);
@@ -798,6 +811,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *                       collision occurs.
 	 * @return true on success, false on failure
 	 */
+	@Override
 	public boolean addXid(final String domain, final String domain_id, final boolean updateIfExists) {
 		Xid oldXID = Xid.findXID(this, domain);
 		if (oldXID != null) {
@@ -933,6 +947,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *
 	 * @return true wenn es gelöscht ist
 	 */
+	@Override
 	public boolean isDeleted() {
 		return get(FLD_DELETED).trim().equals(StringConstants.ONE);
 	}
@@ -1019,6 +1034,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return Der Inhalt des Felds (kann auch null sein), oder **ERROR**, wenn
 	 *         versucht werden sollte, ein nicht existierendes Feld auszulesen
 	 */
+	@Override
 	public @Nullable String get(final String field) {
 		if (getId() == null || getId().isEmpty()) {
 			log.error("Get with no ID on object of type [{}] and field [{}]", this.getClass().getName(), field,
@@ -1473,6 +1489,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @param value Einzusetzender Wert (der vorherige Wert wird überschrieben)
 	 * @return true bei Erfolg
 	 */
+	@Override
 	public boolean set(final String field, String value) {
 		String mapped = map(field);
 		String table = getTableName();
@@ -1636,7 +1653,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return true on success, false else
 	 */
 	public boolean setInt(final String field, final int value) {
-		String stringValue = new Integer(value).toString();
+		String stringValue = Integer.valueOf(value).toString();
 		if (stringValue.length() <= MAX_INT_LENGTH) {
 			return set(field, stringValue);
 		} else {
@@ -2079,6 +2096,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 * @return true if values were set, else <code>false</code> and exception is
 	 *         created
 	 */
+	@Override
 	public boolean get(final String[] fields, final String[] values) {
 		if (getId() == null || getId().isEmpty()) {
 			log.error("Get with no ID on object of type [" + this.getClass().getName() + "]");
@@ -2466,6 +2484,7 @@ public abstract class PersistentObject implements IPersistentObject {
 	 *         operation on this object or 0 if there was no valid lastupdate time
 	 * @since 3.1 use direct db access
 	 */
+	@Override
 	public long getLastUpdate() {
 		String result = getDBConnection()
 				.queryString("SELECT LASTUPDATE FROM " + getTableName() + " WHERE ID=" + getWrappedId());
@@ -2727,6 +2746,7 @@ public abstract class PersistentObject implements IPersistentObject {
 			ZipEntry entry = zis.getNextEntry();
 			if (entry != null) {
 				try (ObjectInputStream ois = new ObjectInputStream(zis) {
+					@Override
 					protected java.lang.Class<?> resolveClass(java.io.ObjectStreamClass desc)
 							throws IOException, ClassNotFoundException {
 						if (resolver != null) {
@@ -2793,15 +2813,6 @@ public abstract class PersistentObject implements IPersistentObject {
 	 */
 	protected String getExportUIDVersion() {
 		return "1";
-	}
-
-	/**
-	 * Exports a persistentobject to an xml string
-	 *
-	 * @return
-	 */
-	public String exportData() {
-		return XML2Database.exportData(this);
 	}
 
 	/**
@@ -3015,7 +3026,7 @@ public abstract class PersistentObject implements IPersistentObject {
 		}
 		if (in instanceof List) {
 			List<?> inList = (List<?>) in;
-			return (String) inList.stream().map(o -> o.toString()).reduce((u, t) -> u + StringConstants.COMMA + t)
+			return inList.stream().map(o -> o.toString()).reduce((u, t) -> u + StringConstants.COMMA + t)
 					.get();
 		}
 		return StringUtils.EMPTY;
